--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="library__content">
                 <button class="library__button">
                     <span class="fa fas fa-book"></span>
-                    <span>Sua biblioteca</span>
+                    <span id="biblioteca">Sua biblioteca</span>
                 </button>
                 <span class="fa fa-plus"></span>
             </div>
@@ -72,6 +72,7 @@
     </div>
     <main>
         <div class="main-container">
+            <!--HEADER-->
             <nav class="header__navigation">
                 <div class="navigation">
                     <button class="arrow-left">
